--- a/index.html
+++ b/index.html
@@ -63,19 +63,21 @@
                 Природных заповедников <span class="light-text-2">105</span> <br>
                 Аэропортов <span class="light-text-2">241</span></p>
         </div>
-        <div class="content-photo-grid">
-            <img class="content-photo-grid-item" src="./image/__item1.png" alt="фото природы">
-            <img class="content-photo-grid-item" src="./image/__item2.png" alt="фото природы">
-            <img class="content-photo-grid-item" src="./image/__item3.png" alt="фото природы">
-            <img class="content-photo-grid-item" src="./image/__item4.png" alt="фото природы">
-            <img class="content-photo-grid-item" src="./image/__item5.png" alt="фото природы">
-            <img class="content-photo-grid-item" src="./image/__item6.png" alt="фото природы">
-            <img class="content-photo-grid-item" src="./image/__item7.png" alt="фото природы">
-            <img class="content-photo-grid-item" src="./image/__item8.png" alt="фото природы">
-            <img class="content-photo-grid-item" src="./image/__item9.png" alt="фото природы">
-            <img class="content-photo-grid-item" src="./image/__item10.png" alt="фото природы">
-            <img class="content-photo-grid-item" src="./image/__item11.png" alt="фото природы">
-            <img class="content-photo-grid-item" src="./image/__item12.png" alt="фото природы">
+        <div class="content-photo-content">
+            <div class="content-photo-grid">
+                <img class="content-photo-grid-item" src="./image/__item1.png" alt="фото природы">
+                <img class="content-photo-grid-item" src="./image/__item2.png" alt="фото природы">
+                <img class="content-photo-grid-item" src="./image/__item3.png" alt="фото природы">
+                <img class="content-photo-grid-item" src="./image/__item4.png" alt="фото природы">
+                <img class="content-photo-grid-item" src="./image/__item5.png" alt="фото природы">
+                <img class="content-photo-grid-item" src="./image/__item6.png" alt="фото природы">
+                <img class="content-photo-grid-item" src="./image/__item7.png" alt="фото природы">
+                <img class="content-photo-grid-item" src="./image/__item8.png" alt="фото природы">
+                <img class="content-photo-grid-item" src="./image/__item9.png" alt="фото природы">
+                <img class="content-photo-grid-item" src="./image/__item10.png" alt="фото природы">
+                <img class="content-photo-grid-item" src="./image/__item11.png" alt="фото природы">
+                <img class="content-photo-grid-item" src="./image/__item12.png" alt="фото природы">
+            </div>
         </div>
         <div class="content-places">
             <div class="content-places-place">
@@ -218,7 +220,8 @@
                     </div>
                 </div>
                 <div class="content-video-container-item-rect">
-                    <a href="#"><img class="content-video-container-item-icon" src="./image/__icon_play.svg" alt="icon play"></a>
+                    <a href="#"><img class="content-video-container-item-icon" src="./image/__icon_play.svg"
+                            alt="icon play"></a>
                     <p class="content-video-container-item-duration">6:30</p>
                     <p class="content-video-container-item-title">Colors of <br> Kamchatka</p>
                     <p class="content-video-container-item-director">Director: Pavel Karykhalin</p>
@@ -229,7 +232,8 @@
                     </div>
                 </div>
                 <div class="content-video-container-item-rect-2">
-                    <a href="#"><img class="content-video-container-item-icon" src="./image/__icon_play.svg" alt="icon play"></a>
+                    <a href="#"><img class="content-video-container-item-icon" src="./image/__icon_play.svg"
+                            alt="icon play"></a>
                     <p class="content-video-container-item-duration">24:45</p>
                     <p class="content-video-container-item-title">Обсерватория | <br> Observatory</p>
                     <p class="content-video-container-item-director">Director: Alexander Khudokon</p>
@@ -349,7 +353,7 @@
                     <p class="content-emblem-items-item-name">Тамбов</p>
                 </div>
                 <div class="content-emblem-items-item">
-                    <img src="./image/birdsCityLegends02_.png" alt="Елабуга">
+                    <img src="./image/birdsCityLegends02.png" alt="Елабуга">
                     <p class="content-emblem-items-item-name">Елабуга</p>
                 </div>
                 <div class="content-emblem-items-item">
